@@ -25,7 +25,6 @@ O quiza, en vez de overlay, una segunda unidad de disco
 
 -Incluir derby pro rom?
 
--Modo mixto visual Mem. Todo junto lectura escritura y opcode com diferentes colores
 
 -Baseconf soporta ulaplus
 
@@ -37,6 +36,7 @@ Quizá algunos que sólo se habiliten mediante variable de debug puesta a mano e
 -Lectura hdf. Simplemente ignorar cabecera. http://ramsoft.bbk.org.omegahg.com/hdfform.html. 
         //0x09 DOFS WORD Image data offset This is the absolute offset in the HDF file where the actual hard-disk data dump starts.
         //In HDF version 1.1 this is 0x216.
+  Quiza para escritura hdf, simplemente tenerlo leido al cargar, en otra zona aparte, y al hacer flush grabarlo de ahi
 
 --------Para próxima versión:
 
